--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
 
+Version 1.0.1
+    - Javadocs added
+    - Overhaul of functions
+    - Function signatures added via hash map
+
 Version 1.0.0
     - Initial Commit
