--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 1.0.3
+    - Compiler now accepts 0 argument instructions without error
+
 Version 1.0.2
     - First parse of source implemented
 
